--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -70,6 +70,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.11",
     "@opengsn/contracts": "^2.2.5",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.3.3"
