--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -32,6 +32,9 @@
   },
   "homepage": "https://github.com/aragon/core#readme",
   "devDependencies": {
+    "@opengsn/provider": "2.2.6",
+    "@opengsn/cli": "2.2.6",
+    "@opengsn/dev": "2.2.6",
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
