--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -73,6 +73,11 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@opengsn/contracts": "^2.2.5",
+    "@opengsn/dev": "^2.2.6",
+    "@opengsn/provider": "^2.2.5",
+    "@openzeppelin/contracts": "^4.3.3",
+    "@openzeppelin/contracts-upgradeable": "^4.3.3",
     "@superfluid-finance/ethereum-contracts": "^1.0.0-rc.11",
     "@opengsn/contracts": "^2.2.5",
     "@openzeppelin/contracts": "^4.5.0",
