--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -32,6 +32,9 @@
   },
   "homepage": "https://github.com/aragon/core#readme",
   "devDependencies": {
+    "@opengsn/provider": "2.2.6",
+    "@opengsn/cli": "2.2.6",
+    "@opengsn/dev": "2.2.6",
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
@@ -72,6 +75,7 @@
   "dependencies": {
     "@opengsn/contracts": "2.2.6",
     "@openzeppelin/contracts": "4.5.0",
-    "@openzeppelin/contracts-upgradeable": "4.5.2"
+    "@openzeppelin/contracts-upgradeable": "4.5.2",
+    "@superfluid-finance/ethereum-contracts": "1.1.1"
   }
 }
